--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ img {
 /*pop-up name*/
 .name-pop-up {
   position: absolute;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -120,6 +121,7 @@ form input:focus {
   color: #fff;
   border: none;
   cursor: pointer;
+  margin-left: 1.6rem;
   transition: all 0.5s;
 }
 .submit-name:hover {
@@ -147,8 +149,9 @@ form input:focus {
 .crown {
   position: absolute;
   top: 0;
-  right: 0;
-  transform: translate(3rem, -1.5rem) rotate(45deg);
+  left: 0;
+  transform: translate(-3.5rem, -1.3rem) rotate(-45deg);
+  font-size: 3.2rem;
   transition: all 1s;
 }
 .crown-hidden {
